kid3-cli: Support star ratings with 'get/set ratingstars'

BUG: 454437